Fix spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@ body {
 @tailwind utilities;
 
 ol {
-  list-style: decimal;
+  list-style: inside decimal;
 }
 
 a {
